fix(branding): increase site branding width for better visibility

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -251,7 +251,7 @@ h1.site-title {
 }
 
 .site-branding {
-  width: 250px;
+  width: 350px;
   height: 96px;
   position: relative;
   float: left;
